@@ -2,7 +2,6 @@ package io.github.vkkkv.rimine.jni;
 
 import com.sun.jna.Pointer;
 import com.sun.jna.Structure;
-import java.util.Arrays;
 import java.util.List;
 
 @Structure.FieldOrder({"ptr", "index", "candidate"})
@@ -13,6 +12,6 @@ public class RimeCandidateListIterator extends Structure {
 
   @Override
   protected List<String> getFieldOrder() {
-    return Arrays.asList("ptr", "index", "candidate");
+    return List.of("ptr", "index", "candidate");
   }
 }
