@@ -1,7 +1,6 @@
 package io.github.vkkkv.rimine.jni;
 
 import com.sun.jna.Structure;
-import java.util.Arrays;
 import java.util.List;
 
 @Structure.FieldOrder({"str", "length"})
@@ -11,6 +10,6 @@ public class RimeStringSlice extends Structure {
 
   @Override
   protected List<String> getFieldOrder() {
-    return Arrays.asList("str", "length");
+    return List.of("str", "length");
   }
 }
